--- a/assets/styles/components/_gallery.scss
+++ b/assets/styles/components/_gallery.scss
@@ -4,25 +4,3 @@
   @include flex-center(column);
   gap: 2rem;
 }
-
-.cardsets-wrapper{
-  @include grid-content-center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  height: clamp(60rem,140vh,80rem);
-}
-
-.cardsets{
-  display: flex;
-  width: 100%;
-  height: 100%;
-  justify-content: space-evenly;
-  align-items: center;
-  gap: 15%;
-  @media screen and (max-width: $media-desktop + 200px){
-    flex-direction: column;
-    gap: 2rem;
-  }
-}
